# mcp-hackathon

./: .gitignore  README.md  eltserien_damer_2024.json  plot_tool.py  prompts.json  pyproject.toml
